--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -764,6 +764,39 @@
 	date = {2011},
 }
 
+@article{noonan_scale-insensitive_2019,
+	title = {Scale-insensitive estimation of speed and distance traveled from animal tracking data},
+	volume = {7},
+	issn = {2051-3933},
+	url = {https://movementecologyjournal.biomedcentral.com/articles/10.1186/s40462-019-0177-1},
+	doi = {10.1186/s40462-019-0177-1},
+	abstract = {Abstract
+            
+              Background
+              Speed and distance traveled provide quantifiable links between behavior and energetics, and are among the metrics most routinely estimated from animal tracking data. Researchers typically sum over the straight-line displacements ({SLDs}) between sampled locations to quantify distance traveled, while speed is estimated by dividing these displacements by time. Problematically, this approach is highly sensitive to the measurement scale, with biases subject to the sampling frequency, the tortuosity of the animal’s movement, and the amount of measurement error. Compounding the issue of scale-sensitivity, {SLD} estimates do not come equipped with confidence intervals to quantify their uncertainty.
+            
+            
+              Methods
+              To overcome the limitations of {SLD} estimation, we outline a continuous-time speed and distance ({CTSD}) estimation method. An inherent property of working in continuous-time is the ability to separate the underlying continuous-time movement process from the discrete-time sampling process, making these models less sensitive to the sampling schedule when estimating parameters. The first step of {CTSD} is to estimate the device’s error parameters to calibrate the measurement error. Once the errors have been calibrated, model selection techniques are employed to identify the best fit continuous-time movement model for the data. A simulation-based approach is then employed to sample from the distribution of trajectories conditional on the data, from which the mean speed estimate and its confidence intervals can be extracted.
+            
+            
+              Results
+              Using simulated data, we demonstrate how {CTSD} provides accurate, scale-insensitive estimates with reliable confidence intervals. When applied to empirical {GPS} data, we found that {SLD} estimates varied substantially with sampling frequency, whereas {CTSD} provided relatively consistent estimates, with often dramatic improvements over {SLD}.
+            
+            
+              Conclusions
+              The methods described in this study allow for the computationally efficient, scale-insensitive estimation of speed and distance traveled, without biases due to the sampling frequency, the tortuosity of the animal’s movement, or the amount of measurement error. In addition to being robust to the sampling schedule, the point estimates come equipped with confidence intervals, permitting formal statistical inference. All the methods developed in this study are now freely available in the  package or the  point-and-click web based graphical user interface.},
+	pages = {35},
+	number = {1},
+	journaltitle = {Movement Ecology},
+	shortjournal = {Mov Ecol},
+	author = {Noonan, Michael J. and Fleming, Christen H. and Akre, Thomas S. and Drescher-Lehman, Jonathan and Gurarie, Eliezer and Harrison, Autumn-Lynn and Kays, Roland and Calabrese, Justin M.},
+	urldate = {2021-06-23},
+	date = {2019-12},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\JKLR6F9N\\Noonan et al. - 2019 - Scale-insensitive estimation of speed and distance.pdf:application/pdf},
+}
+
 @article{ameca_y_juarez_natural_2012,
 	title = {Natural population die-offs: causes and consequences for terrestrial mammals},
 	volume = {27},
@@ -2556,39 +2589,6 @@
 	langid = {english},
 }
 
-@article{noonan_scale-insensitive_2019,
-	title = {Scale-insensitive estimation of speed and distance traveled from animal tracking data},
-	volume = {7},
-	issn = {2051-3933},
-	url = {https://movementecologyjournal.biomedcentral.com/articles/10.1186/s40462-019-0177-1},
-	doi = {10.1186/s40462-019-0177-1},
-	abstract = {Abstract
-            
-              Background
-              Speed and distance traveled provide quantifiable links between behavior and energetics, and are among the metrics most routinely estimated from animal tracking data. Researchers typically sum over the straight-line displacements ({SLDs}) between sampled locations to quantify distance traveled, while speed is estimated by dividing these displacements by time. Problematically, this approach is highly sensitive to the measurement scale, with biases subject to the sampling frequency, the tortuosity of the animal’s movement, and the amount of measurement error. Compounding the issue of scale-sensitivity, {SLD} estimates do not come equipped with confidence intervals to quantify their uncertainty.
-            
-            
-              Methods
-              To overcome the limitations of {SLD} estimation, we outline a continuous-time speed and distance ({CTSD}) estimation method. An inherent property of working in continuous-time is the ability to separate the underlying continuous-time movement process from the discrete-time sampling process, making these models less sensitive to the sampling schedule when estimating parameters. The first step of {CTSD} is to estimate the device’s error parameters to calibrate the measurement error. Once the errors have been calibrated, model selection techniques are employed to identify the best fit continuous-time movement model for the data. A simulation-based approach is then employed to sample from the distribution of trajectories conditional on the data, from which the mean speed estimate and its confidence intervals can be extracted.
-            
-            
-              Results
-              Using simulated data, we demonstrate how {CTSD} provides accurate, scale-insensitive estimates with reliable confidence intervals. When applied to empirical {GPS} data, we found that {SLD} estimates varied substantially with sampling frequency, whereas {CTSD} provided relatively consistent estimates, with often dramatic improvements over {SLD}.
-            
-            
-              Conclusions
-              The methods described in this study allow for the computationally efficient, scale-insensitive estimation of speed and distance traveled, without biases due to the sampling frequency, the tortuosity of the animal’s movement, or the amount of measurement error. In addition to being robust to the sampling schedule, the point estimates come equipped with confidence intervals, permitting formal statistical inference. All the methods developed in this study are now freely available in the  package or the  point-and-click web based graphical user interface.},
-	pages = {35},
-	number = {1},
-	journaltitle = {Movement Ecology},
-	shortjournal = {Mov Ecol},
-	author = {Noonan, Michael J. and Fleming, Christen H. and Akre, Thomas S. and Drescher-Lehman, Jonathan and Gurarie, Eliezer and Harrison, Autumn-Lynn and Kays, Roland and Calabrese, Justin M.},
-	urldate = {2022-04-07},
-	date = {2019-12},
-	langid = {english},
-	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\NIAKEDTA\\Noonan et al. - 2019 - Scale-insensitive estimation of speed and distance.pdf:application/pdf},
-}
-
 @article{pettorelli_using_2005,
 	title = {Using the satellite-derived {NDVI} to assess ecological responses to environmental change},
 	volume = {20},
@@ -3439,6 +3439,22 @@
 	editor = {Festa-Bianchet, Marco},
 	urldate = {2022-09-23},
 	date = {2015-06},
+	langid = {english},
+}
+
+@article{mueller_search_2008-1,
+	title = {In search of forage: predicting dynamic habitats of Mongolian gazelles using satellite-based estimates of vegetation productivity},
+	volume = {45},
+	issn = {00218901, 13652664},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2664.2007.01371.x},
+	doi = {10.1111/j.1365-2664.2007.01371.x},
+	shorttitle = {In search of forage},
+	pages = {649--658},
+	number = {2},
+	journaltitle = {Journal of Applied Ecology},
+	author = {Mueller, Thomas and Olson, Kirk A. and Fuller, Todd K. and Schaller, George B. and Murray, Martyn G. and Leimgruber, Peter},
+	urldate = {2022-03-21},
+	date = {2008-04},
 	langid = {english},
 }
 
@@ -5387,4 +5403,114 @@ Version Number: 1},
 	urldate = {2024-04-12},
 	date = {2020-03-31},
 	doi = {10.2307/j.ctvx5wbqt},
+}
+
+@article{weststrate_how_2024,
+	title = {How climate change and population growth will shape attendance and human-wildlife interactions at British Columbia parks},
+	issn = {0966-9582, 1747-7646},
+	url = {https://www.tandfonline.com/doi/full/10.1080/09669582.2024.2331228},
+	doi = {10.1080/09669582.2024.2331228},
+	pages = {1--15},
+	journaltitle = {Journal of Sustainable Tourism},
+	shortjournal = {Journal of Sustainable Tourism},
+	author = {Weststrate, Dayna K. and Chhen, Aimee and Mezzini, Stefano and Safford, Kirk and Noonan, Michael J.},
+	urldate = {2024-04-12},
+	date = {2024-03-18},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\8UAH2DSR\\Weststrate et al. - 2024 - How climate change and population growth will shap.pdf:application/pdf},
+}
+
+@article{johnson_comparison_1980,
+	title = {The Comparison of Usage and Availability Measurements for Evaluating Resource Preference},
+	volume = {61},
+	rights = {http://onlinelibrary.wiley.com/{termsAndConditions}\#vor},
+	issn = {0012-9658, 1939-9170},
+	url = {https://esajournals.onlinelibrary.wiley.com/doi/10.2307/1937156},
+	doi = {10.2307/1937156},
+	abstract = {Modern ecological research often involves the comparison of the usage of habitat types or food items to the availability of those resources to the animal. Widely used methods of determining preference from measurements of usage and availability depend critically on the array of components that the researcher, often with a degree of arbitrariness, deems available to the animal. This paper proposes a new method, based on ranks of components by usage and by availability. A virtue of the rank procedure is that it provides comparable results whether a questionable component is included or excluded from consideration. Statistical tests of significance are given for the method. The paper also offers a hierarchical ordering of selection processes. This hierarchy resolves certain inconsistencies among studies of selection and is compatible with the analytic technique offered in this paper.},
+	pages = {65--71},
+	number = {1},
+	journaltitle = {Ecology},
+	shortjournal = {Ecology},
+	author = {Johnson, Douglas H.},
+	urldate = {2024-05-17},
+	date = {1980-02},
+	langid = {english},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\CAYYTQ4P\\Johnson - 1980 - The Comparison of Usage and Availability Measureme.pdf:application/pdf},
+}
+
+@article{van_baalen_alternative_2001,
+	title = {Alternative Food, Switching Predators, and the Persistence of Predator‐Prey Systems},
+	volume = {157},
+	issn = {0003-0147, 1537-5323},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/319933},
+	doi = {10.1086/319933},
+	pages = {512--524},
+	number = {5},
+	journaltitle = {The American Naturalist},
+	shortjournal = {The American Naturalist},
+	author = {Van Baalen, Minus and Křivan, Vlastimil and Van Rijn, Paul C. J. and Sabelis, Maurice W.},
+	urldate = {2024-05-20},
+	date = {2001-05},
+	langid = {english},
+}
+
+@article{duncan_lifehistory_2015,
+	title = {Life‐history attributes and resource dynamics determine intraspecific home‐range sizes in Carnivora},
+	volume = {1},
+	issn = {2056-3485, 2056-3485},
+	url = {https://zslpublications.onlinelibrary.wiley.com/doi/10.1002/rse2.6},
+	doi = {10.1002/rse2.6},
+	abstract = {Abstract
+            
+              Home ranges capture a fundamental aspect of animal ecology, resulting from interactions between metabolic demands and resource availability. Yet, the understanding of their emergence is currently limited by lack of consideration of the covariation between intrinsic and extrinsic drivers. We analysed intraspecific home‐range size (
+              {HRS}
+              ) variation with respect to life histories and remotely sensed proxies of resource dynamics for 21 Carnivora species. Our best model explained over half of the observed variability in intraspecific
+              {HRS}
+              across populations of multiple species. At the species level, median
+              {HRS}
+              was smaller for omnivorous species and increased with increasing body mass (model
+              R
+              2
+               = 0.66). Here,
+              {HRS}
+              scaled with body mass at 0.80, a value much closer to the expected allometric scaling of 0.75 than previously reported. At the intraspecific level, while much variation was driven by intrinsic factors (body mass, diet, social organization and sex;
+              R
+              2
+               = 0.39), inclusion of spatiotemporal variation in extrinsic factors (average resource availability and seasonality) enabled explanation of a further 13\% of observed variability in
+              {HRS}
+              . We found no evidence for interactions between intrinsic and extrinsic
+              {HRS}
+              drivers, suggesting a generally ubiquitous influence of resource availability on space‐use. Our findings illustrate how spatial and temporal information on resource dynamics as derived by satellite data can significantly improve our understanding of
+              {HRS}
+              variation at the interspecific and intraspecific levels, and urge caution in interpreting
+              {HRS}
+              allometry in the face of large intraspecific variation. Moreover, our results highlight the importance of considering life‐history constraints in modelling intraspecific space‐use and
+              {HRS}
+              .},
+	pages = {39--50},
+	number = {1},
+	journaltitle = {Remote Sensing in Ecology and Conservation},
+	shortjournal = {Remote Sens Ecol Conserv},
+	author = {Duncan, Clare and Nilsen, Erlend B. and Linnell, John D. C. and Pettorelli, Nathalie},
+	urldate = {2024-05-29},
+	date = {2015-10},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\JCT2I8LF\\Duncan et al. - 2015 - Life‐history attributes and resource dynamics dete.pdf:application/pdf},
+}
+
+@article{martinez-garcia_how_2020-1,
+	title = {How range residency and long-range perception change encounter rates},
+	volume = {498},
+	issn = {00225193},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022519320301223},
+	doi = {10.1016/j.jtbi.2020.110267},
+	pages = {110267},
+	journaltitle = {Journal of Theoretical Biology},
+	shortjournal = {Journal of Theoretical Biology},
+	author = {Martinez-Garcia, Ricardo and Fleming, Christen H. and Seppelt, Ralf and Fagan, William F. and Calabrese, Justin M.},
+	urldate = {2024-05-30},
+	date = {2020-08},
+	langid = {english},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\IBFKAP26\\Martinez-Garcia et al. - 2020 - How range residency and long-range perception chan.pdf:application/pdf},
 }
